# jaseppi-v5

./: .dockerignore  Cargo.toml  Cross.toml  Dockerfile  deploy.bat  fly.toml
src/: ggst.rs  main.rs  sf6.rs  voice.rs
