[package]
name = "jaseppi-v5"
version = "0.1.0"
edition = "2021"

[dependencies]
ggstdl = { git = "https://github.com/sagansfault/ggstdl", branch = "main" }
sf6rs = { git = "https://github.com/sagansfault/sf6rs", branch = "main" }

ascii_table = "4.0.3"
reqwest = "0.11"
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend", "cache", "model", "builder", "http"]
version = "0.12.2"

[dependencies.poise]
version = "0.6.1"

[dependencies.songbird]
version = "0.4.3"
features = ["builtin-queue", "rustls"]

[dependencies.symphonia]
features = ["aac", "mp3", "isomp4", "alac"]
version = "0.5.2"

[dependencies.tokio]
version = "1.38.1"
features = ["full"]

[dependencies.futures]
version = "0.3.30"

[dependencies.rand]
version = "0.8.5"